# Plonky3

./: .gitignore  Cargo.toml  res.txt  res3.txt
examples/: Cargo.toml
examples/examples/: prove_prime_field_31.rs
examples/src/: airs.rs  dfts.rs  lib.rs  parsers.rs  proofs.rs  tests.rs  types.rs
fib-wasm/: Cargo.toml  README.md  build.sh  index.html  simple-test.html  test.html
fib-wasm/src/: lib.rs  main.rs
fib2/: Cargo.toml  README.md  res.txt  res2.txt  trace.txt
fib2/examples/: demo.rs
fib2/src/: lib.rs  main.rs  miden.rs  plonky3.rs  tests.rs  trace.rs  types.rs
fib_example/: Cargo.toml
fib_example/examples/: fibonacci_demo.rs  simple.rs
fib_example/src/: air.rs  config.rs  lib.rs  prover.rs  simple.rs  trace.rs
fri/: Cargo.toml
fri/src/: prover.rs  two_adic_pcs.rs
goldilocks-monty/: Cargo.toml
goldilocks-monty/benches/: bench_field.rs  extension.rs
goldilocks-monty/src/: extension.rs  goldilocks.rs  lib.rs  mds.rs
goldilocks-monty/src/x86_64_avx2/: packing.rs
goldilocks-monty/src/x86_64_avx512/: mod.rs  packing.rs
goldilocks-wasm-benchmark/: BENCHMARK_RESULTS.md  run-benchmarks.sh
goldilocks-wasm-benchmark/src/: lib.rs  main.rs
keccak-air/src/: air.rs  generation.rs  lib.rs
mds/src/: util.rs
monty-64/src/: monty_64.rs
poseidon2-air/src/: generation.rs  lib.rs
trace-convertor/: Cargo.toml  README.md
trace-convertor/examples/: miden_to_plonky3.rs
trace-convertor/src/: lib.rs
uni-stark/: Cargo.toml
uni-stark/src/: prover.rs
