[package]
name = "fib-wasm"
version = "0.3.0"
edition = "2021"

[workspace]

[lib]
name = "fib_wasm"
crate-type = ["cdylib"]

[[bin]]
name = "fib-wasm"
path = "src/main.rs"

[dependencies]
p3-air = { path = "../air", version = "0.3.0" }
p3-challenger = { path = "../challenger", version = "0.3.0" }
p3-commit = { path = "../commit", version = "0.3.0" }
p3-dft = { path = "../dft", version = "0.3.0" }
p3-field = { path = "../field", version = "0.3.0" }
p3-fri = { path = "../fri", version = "0.3.0" }
p3-goldilocks = { path = "../goldilocks", version = "0.3.0" }
p3-keccak = { path = "../keccak", version = "0.3.0" }
p3-matrix = { path = "../matrix", version = "0.3.0" }
p3-merkle-tree = { path = "../merkle-tree", version = "0.3.0" }
p3-symmetric = { path = "../symmetric", version = "0.3.0" }
p3-uni-stark = { path = "../uni-stark", version = "0.3.0" }

wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]