[package]
name = "p3-goldilocks-monty"
description = "Goldilocks field implementation using Montgomery arithmetic from monty-64"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-monty-64 = { path = "../monty-64" }

num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }