[package]
name = "p3-trace-convertor"
description = "Direct conversion between Miden VM execution traces and Plonky3 STARK traces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Plonky3 dependencies
p3-matrix.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true
p3-util.workspace = true

# Miden VM dependencies
miden-processor = { git = "https://github.com/0xMiden/miden-vm.git", default-features = false }
miden-core = { git = "https://github.com/0xMiden/miden-vm.git", default-features = false }
winter-prover = { version = "0.13", default-features = false }

[dev-dependencies]
# For testing
p3-baby-bear.workspace = true

# For examples - additional Miden dependencies needed for full program execution
miden-core = { git = "https://github.com/0xMiden/miden-vm.git", default-features = false }
miden-assembly = { git = "https://github.com/0xMiden/miden-vm.git", default-features = false }

[features]
default = []
# miden = ["dep:miden-vm", "dep:miden-processor"]